@@ -1,8 +1,10 @@
 package io.ssafy.mallook.domain.product.dao.mongo;
 
 import io.ssafy.mallook.domain.product.dto.request.ProductHotKeywordDto;
+import io.ssafy.mallook.domain.product.dto.response.ProductPageRes;
 import io.ssafy.mallook.domain.product.dto.response.ProductsDetailDto;
 import io.ssafy.mallook.domain.product.dto.response.ProductsListDto;
+import io.ssafy.mallook.domain.product.dto.response.ProductsPageRes;
 import io.ssafy.mallook.domain.product.entity.Products;
 import io.ssafy.mallook.domain.product.entity.ReviewObject;
 import io.ssafy.mallook.domain.product.entity.Reviews;
@@ -20,6 +22,7 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 import static org.springframework.data.mongodb.core.aggregation.Aggregation.newAggregation;
@@ -32,8 +35,8 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
     private final String COLLECTION_NAME = "hiver";
 
     @Override
-    public Slice<ProductsListDto> getProductsListByCategory(ObjectId cursor, Pageable pageable, String mainCategory, String subCategory) {
-        Query query = new Query().addCriteria(Criteria.where("id").lt(cursor))
+    public ProductsPageRes getProductsListByCategory(ObjectId cursor, Pageable pageable, String mainCategory, String subCategory) {
+        Query query = new Query().addCriteria(Criteria.where("id").lte(cursor))
                 .with(pageable);
 
         if (!isNull(mainCategory)) {
@@ -46,14 +49,19 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
         List<ProductsListDto> productsList = mongoTemplate.find(query, Products.class)
                 .stream()
                 .map(ProductsListDto::toDto)
-                .toList();
+                .collect(Collectors.toList());
+        boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber()) * pageable.getPageSize());
+        var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
+        productsList.remove(productsList.size() - 1);
 
-        boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
-        return new SliceImpl<>(productsList, pageable, hasNext);
+        return ProductsPageRes.builder()
+                .content(productsList)
+                .nextCursor(nextCursor)
+                .build();
     }
 
     @Override
-    public Slice<ProductsListDto> findByProductName(String name, String cursor, Pageable pageable) {
+    public ProductsPageRes findByProductName(String name, String cursor, Pageable pageable) {
         Query query = new Query().addCriteria(Criteria.where("name").regex(name, "i"));
 
         if (!isNull(cursor) && !cursor.isEmpty()) {
@@ -65,12 +73,16 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
                 .map(ProductsListDto::toDto)
                 .toList();
         boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
-
-        return new SliceImpl<>(productsList, pageable, hasNext);
+        var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
+        productsList.remove(productsList.size() - 1);
+        return ProductsPageRes.builder()
+                .content(productsList)
+                .nextCursor(nextCursor)
+                .build();
     }
 
     @Override
-    public Slice<ProductsListDto> findByKeywordList(ProductHotKeywordDto hotKeywordDto, String cursor, Pageable pageable) {
+    public ProductsPageRes findByKeywordList(ProductHotKeywordDto hotKeywordDto, String cursor, Pageable pageable) {
         List<String> keywords = hotKeywordDto.hotKeywordList();
         Query query = new Query().addCriteria(Criteria.where("keywords").in(keywords));
 
@@ -83,8 +95,13 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
                 .map(ProductsListDto::toDto)
                 .toList();
         boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
+        var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
+        productsList.remove(productsList.size() - 1);
 
-        return new SliceImpl<>(productsList, pageable, hasNext);
+        return ProductsPageRes.builder()
+                .content(productsList)
+                .nextCursor(nextCursor)
+                .build();
     }
 
     @Override
@@ -118,7 +135,7 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
 
     @Override
     public Page<ProductsListDto> getProductsWithManyReviews(int page, int size) {
-        page = page > 9 ? 9 : Math.max(page, 0) ;
+        page = page > 9 ? 9 : Math.max(page, 0);
         Long maxProducts = 100L;
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "reviews.count"));
         Query query = new Query().with(pageable);
